made changes to index file

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <p>Sade is a junior web developer, hailing right out of General Assembly's Web Development Immersive Program</p>
 
 <ul>
-  <li>Home</li>
-  <li>Projects</li>
-  <li>About me</li>
-  <li>Blog</li>
-  <li>Contact</li>
+  <li><a href='/home'>Home</a></li>
+  <li><a href='/projects'>Projects</a></li>
+  <li><a href='/about_me'>About me</a></li>
+  <li><a href='/blog'>Blog</a></li>
+  <li><a href='/contact'>Contact</a></li>
 </ul>
 
 </body>
