added icon bars

--- a/index.html
+++ b/index.html
@@ -19,16 +19,23 @@
   </head>
   <body>
     <h1>Sade N. Stevens</h1>
-<!--
+
   <div class ="intro-text">
     <p>
       Sade is a junior web developer, hailing right out of General Assembly's Web Development Immersive Program
     </p>
-  </div> -->
+  </div>
 
   <div class="navbar navbar-default navbar-static-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse data-target=".navbar-collapse>
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+
       </div>
     </div>
   </div>
