--- a/index.html
+++ b/index.html
@@ -20,11 +20,6 @@
   <body>
     <h1>Sade N. Stevens</h1>
 
-  <div class ="intro-text">
-    <p>
-      Sade is a junior web developer, hailing right out of General Assembly's Web Development Immersive Program
-    </p>
-  </div>
 
   <div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
@@ -35,6 +30,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+        <a class="navbar-brand" href="a">Bootstrap Bay</a>
       </div>
     </div>
   </div>
