--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         </button>
         <a class="navbar-brand" href="a">Bootstrap Bay</a>
       </div>
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="#">Home</a></li>
+        </ul>
+      </div>
     </div>
   </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
