--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="a">Bootstrap Bay</a>
+        <a class="navbar-brand" href="#">Bootstrap Bay</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
         </ul>
       </div>
     </div>
